> minor path bug.

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,5 @@
 .loading{
-  background-image:url('/assets/icons/loading.svg');
+  background-image:url('assets/icons/loading.svg');
   background-color: red;
   background-repeat: no-repeat;
   background-size: cover;
