> Custom styles can now be passed for slider card caption.

--- a/src/components/slider-card/slider-card.module.scss
+++ b/src/components/slider-card/slider-card.module.scss
@@ -38,7 +38,7 @@
 :global {
     div.div.div__sliderCard img.loading{
     background-image:url('assets/icons/loading.svg');
-    background-color: gray;
+    // background-color: gray;
     background-repeat: no-repeat;
     background-size: cover;
     // border: 2px solid black;
