--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,4 +1,8 @@
+@import url('./tailwind.css');
+@import url('./global-checkbox.css');
+
 body {
+  font-family: 'Merriweather Sans', sans-serif;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
