--- a/src/components/slider-card/slider-card.module.scss
+++ b/src/components/slider-card/slider-card.module.scss
@@ -35,14 +35,12 @@
     background-color: rgb(21, 21, 21);
 }
 
-:global {
-    div.div.div__sliderCard img.loading{
-    background-image:url('assets/icons/loading.svg');
-    // background-color: gray;
+// :global {
+    .imageLoading{
+        background-image:url('assets/icons/loading.svg');
     background-repeat: no-repeat;
     background-size: cover;
-    // border: 2px solid black;
     background-position:center;
   
    }
-  }
+//   }
