--- a/src/components/slider-card/slider-card.module.scss
+++ b/src/components/slider-card/slider-card.module.scss
@@ -37,7 +37,7 @@
 
 // :global {
     .imageLoading{
-        background-image:url('/src/assets/icons/loading.svg');
+        // background-image:url('/src/assets/icons/loading.svg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
